Added Readme and renaming some things
- Added readme note to the project explaining the different behaviours.
- Changed BoundsExtension name to plural.
- Changed DebugCameraFocus property name for a better understanding of its underlying effect to the camera behviour.

--- a/3D/senior/iwd-challenge/.gitignore
+++ b/3D/senior/iwd-challenge/.gitignore
@@ -1,4 +1,4 @@
-Ignore everything
+﻿Ignore everything
 /*
 /*/
 
@@ -7,7 +7,9 @@ Ignore everything
 !/ExternalAssets/
 !/ProjectSettings/
 !.gitignore
-!readme.txt
+!readme.txt!
+!readme.md
+!README.md
 !*.unitypackage
 !/UML/
 
